--- a/src/components/Team/Team.css
+++ b/src/components/Team/Team.css
@@ -7,43 +7,43 @@
   height: 1.7rem;
 }
 .team:nth-child(1) {
-  border-left: 2px solid #27ccf5;
+  border-left: 2px solid #03a71e;
 }
 .team:nth-child(2) {
-  border-left: 2px solid #27ccf5;
+  border-left: 2px solid #03a71e;
 }
 .team:nth-child(3) {
-  border-left: 2px solid #27ccf5;
+  border-left: 2px solid #03a71e;
 }
 .team:nth-child(4) {
-  border-left: 2px solid #27ccf5;
+  border-left: 2px solid #03a71e;
 }
 .team:nth-child(5) {
-  border-left: 2px solid #27ccf5;
+  border-left: 2px solid #03a71e;
 }
 .team:nth-child(6) {
-  border-left: 2px solid #e97a12;
+  border-left: 2px solid #e9b012;
 }
 .team:nth-child(7) {
-  border-left: 2px solid #e97a12;
+  border-left: 2px solid #e9b012;
 }
 .team:nth-child(8) {
-  border-left: 2px solid #e97a12;
+  border-left: 2px solid #e9b012;
 }
 .team:nth-child(9) {
-  border-left: 2px solid #e97a12;
+  border-left: 2px solid #e9b012;
 }
 .team:nth-child(10) {
-  border-left: 2px solid #e97a12;
+  border-left: 2px solid #e9b012;
 }
 .team:nth-child(11) {
-  border-left: 2px solid #e97a12;
+  border-left: 2px solid #e9b012;
 }
 .team:nth-child(12) {
-  border-left: 2px solid #e97a12;
+  border-left: 2px solid #e9b012;
 }
 .team:nth-child(13) {
-  border-left: 2px solid #e97a12;
+  border-left: 2px solid #e9b012;
 }
 .team__position {
   margin-bottom: 0.1rem;
