--- a/src/components/Match/Match.scss
+++ b/src/components/Match/Match.scss
@@ -4,3 +4,62 @@ $color_mark: #59546C;
 $color_font: #8B939C;
 $color_select: #FF0035;
 
+.match {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    background-color: $color_back;
+    margin-bottom: 0.4rem;
+    transition: transform 0.3s linear;
+    box-shadow: 0 0 10px 1px #00000055;
+
+    &:hover {
+        transform: scale(1.05);
+    }
+
+    &__teams {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 2fr 1fr;
+        place-items: center;
+        grid-column: 1 / span 3;
+        grid-row: 1 / 2;
+
+        &--name {
+            color: $color_font;
+            font-weight: 600;
+            font-size: 1.2rem;
+        }
+    }
+
+    &__date {
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+        font-size: 0.8rem;
+        font-weight: 300;
+        color: #778eec;
+    }
+    &__hour {
+        grid-column: 2 / 3;
+        grid-row: 3 / 4;
+        font-size: 0.8rem;
+        font-weight: 300;
+        color: #ecc377;
+    }
+
+    &__site {
+        grid-column: 2 / 3;
+        grid-row: 4 / 5;
+        font-size: 0.8rem;
+        font-weight: 300;
+        color: $color_select;
+    }
+}
+
+.team__logo {
+    height: 3rem;
+    object-fit: cover;
+    grid-row: 1 / 5;
+    -webkit-filter: drop-shadow(0px 0px 5px rgba(150, 150, 150, 0.7));
+    filter: drop-shadow(0px 0px 5px rgba(150, 150, 150, 0.7));
+}
