--- a/src/components/Match/Match.scss
+++ b/src/components/Match/Match.scss
@@ -12,6 +12,7 @@ $color_select: #FF0035;
     margin-bottom: 0.4rem;
     transition: transform 0.3s linear;
     box-shadow: 0 0 10px 1px #00000055;
+    border-bottom: 1px solid #7ec929bb;
 
     &:hover {
         transform: scale(1.05);
