--- a/src/components/Match/Match.css
+++ b/src/components/Match/Match.css
@@ -6,6 +6,7 @@
   margin-bottom: 0.4rem;
   transition: transform 0.3s linear;
   box-shadow: 0 0 10px 1px #00000055;
+  border-bottom: 1px solid #7ec929bb;
 }
 .match:hover {
   transform: scale(1.05);
