--- a/src/components/Results/Results.scss
+++ b/src/components/Results/Results.scss
@@ -9,4 +9,9 @@ $color_select: #FF0035;
     display: flex;
     flex-direction: column;
     gap: 0.3rem;
+
+    &__title {
+        font-size: 1.5rem;
+        color: $color_font;
+    }
 }
