--- a/src/routes/Home/HomePage.scss
+++ b/src/routes/Home/HomePage.scss
@@ -37,4 +37,11 @@ $color_select: #FF0035;
         }
     }
 
+    &__logoag {
+        position: absolute;
+        width: 10rem;
+        bottom: 1.5rem;
+        left: 2.5rem;
+    }
+
 }
