--- a/src/components/Fixtures/Fixtures.scss
+++ b/src/components/Fixtures/Fixtures.scss
@@ -4,3 +4,27 @@ $color_mark: #59546C;
 $color_font: #8B939C;
 $color_select: #FF0035;
 
+.fixtures {
+    padding: 0.5rem;
+    background-color: $color_title;
+
+    &__label {
+        justify-self: left;
+    }
+
+    &__input {
+        padding: 0.4rem 0.6rem;
+        margin: 0.5rem 0.7rem 0.5rem 0.2rem;
+    }
+
+    &__send {
+        padding: 0.4rem 1.5rem;
+        background-color: $color_select;
+        border: 2px solid transparent;
+        cursor: pointer;
+
+        &:hover {
+            border-color: $color_font;
+        }
+    }
+}
