--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -19,6 +19,12 @@ $color_select: #FF0035;
         }
     }
 
+    &__navlink {
+        width: 2.5rem;
+        height: 2.5rem;
+        background-color: #f2f8ff;
+    }
+
     &__title {
         background-color: #FFFFFF10;
         color: $color_select;
@@ -49,7 +55,7 @@ $color_select: #FF0035;
 
     &__item {
         width: 100%;
-        padding: 0.2rem 0;
+        padding: 0.4rem 0;
         font-size: 0.8rem;
         background-color: $color_title;
         border: 1px solid transparent;
