--- a/src/routes/Home/HomePage.css
+++ b/src/routes/Home/HomePage.css
@@ -28,3 +28,9 @@
   filter: brightness(130%);
   border: 2px solid #8B939C;
 }
+.home__logoag {
+  position: absolute;
+  width: 10rem;
+  bottom: 1.5rem;
+  left: 2.5rem;
+}
