--- a/src/components/MatchBetting/MatchBetting.scss
+++ b/src/components/MatchBetting/MatchBetting.scss
@@ -35,9 +35,18 @@ $color_select: #FF0035;
         }
     }
 
+    &__container {
+        display: flex;
+        width: 5rem;
+        height: 2.5rem;
+        background-color: #8B939C00;
+        overflow: hidden;
+    }
+
     &__image {        
-        width: 2.5rem;
-        object-fit: cover;
+        width: 7rem;
+        object-fit: contain;
+        opacity: 0.8;
         -webkit-filter: drop-shadow(0px 0px 5px rgba(150, 150, 150, 0.7));
         filter: drop-shadow(0px 0px 5px rgba(150, 150, 150, 0.7));
 
@@ -64,7 +73,7 @@ $color_select: #FF0035;
         border: 1px solid $color_font;
 
         &:hover {
-            border-color: #0be62c;
+            border-color: #c0d031;
         }
     }
     
@@ -93,7 +102,7 @@ $color_select: #FF0035;
         top: 0.2rem;
         padding: 0.1rem 0.1rem 0 0.1rem;
         font-weight: 600;
-        background-color: #19b42d;
+        background-color: #17d627aa;
         transition: all 0.3s linear;
         border: 1px solid $color_title;
         pointer-events: none;
