--- a/src/components/MatchHeader/MatchHeader.scss
+++ b/src/components/MatchHeader/MatchHeader.scss
@@ -5,7 +5,7 @@ $color_font: #8B939C;
 $color_select: #FF0035;
 
 
-.matchheader {
+.matchheader {    
     background-color: $color_back;
     box-shadow: 0 0 10px 1px #00000055;
     border-bottom: 1px solid #7ec929bb;
@@ -13,10 +13,25 @@ $color_select: #FF0035;
     height: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 3fr 1fr;
+    grid-template-rows: 1fr;
     place-items: center;
     padding: 0.07rem;
     margin-bottom: 0.5rem;
+    overflow: hidden;
+
+    &__container {
+        position: relative;
+        display: flex;
+        width: 100%;
+        height: 100%;
+    }
+
+    &__vs {
+        position: absolute;
+        font-size: 0.7rem;
+        color: #fff569;
+        transform: rotate(270deg);
+    }
     
     &__name {
         color: #dee3e9;
@@ -30,28 +45,38 @@ $color_select: #FF0035;
             grid-column: 1 / 2;
             grid-row: 1 / 2;
             margin: 0 0rem;
+            align-self: flex-end;
+            color: #ffc188;
         }
         
         &--away {
             grid-column: 2 / 3;
             grid-row: 1 / 2;
+            align-self: flex-start;
+            color: #88fff5;
         }
     }
 
     &__image {        
-        width: 1.2rem;
+        position: absolute;
+        left: -1rem;
+        width: 3rem;
+        height: 3rem;
         object-fit: cover;
+        opacity: 0.15;
         -webkit-filter: drop-shadow(0px 0px 5px rgba(150, 150, 150, 0.7));
         filter: drop-shadow(0px 0px 5px rgba(150, 150, 150, 0.7));
 
         &--home {
             grid-row: 2 / 3;
             grid-column: 1 / 2;
+            bottom: 0;
         }
         
         &--away {
             grid-row: 2 / 3;
             grid-column: 2 / 3;
+            top: 0;
         }
     }
 }
