--- a/src/routes/Betting/BettingPage.scss
+++ b/src/routes/Betting/BettingPage.scss
@@ -7,33 +7,130 @@ $color_select: #FF0035;
 .bettingpage {
     padding: 0.5rem;
     background-color: $color_title;
-    width: 100%;
-
-    &__label {
-        justify-self: left;
-    }
+    width: 98%;
 
     &__input {
+        height: 30%;
         padding: 0.4rem 0.6rem;
         margin: 0.5rem 0.7rem 0.5rem 0.2rem;
     }
 
     &__send {
-        padding: 0.4rem 1.5rem;
+        padding: 0.5rem 1.2rem;
         background-color: $color_select;
         border: 2px solid transparent;
+        margin: 1rem 0;
+        background-color: $color_back;
+        border: 1px solid $color_font;
+        font-family: 'Raleway', sans-serif;
+        transition: border-color 0.2s linear;
+        justify-self: flex-start;
         cursor: pointer;
 
         &:hover {
-            border-color: $color_font;
+            filter: brightness(140%);
+            background-color: #1b253b;
         }
+    }
+
+    input{
+        padding: 0.5rem 0.7rem;
+        background-color: #0E131F99;
+        border: 1px solid $color_font;
+        font-family: 'Raleway', sans-serif;
+    }
+
+    &__container {
+        position: relative;
+        width: 100%;
+        position: relative;
+        display: grid;
+        grid-template-columns: 1fr 1fr 5fr;
+        padding: 0.4rem;
+        place-items: center;
+    }
+
+    &__error {
+        position: absolute;
+        top: -0.2rem;
+        left: 1rem;
+        font-size: 0.85rem;
+        padding: 0 0.4rem;
+        color: #ffe6e6;
+        font-weight: 400;
+        letter-spacing: 0.05rem;
+        background-color: #ff060675;
+        animation: animationError 1.5s linear infinite;
+    }
+
+    &__betting {
+        position: relative;
+    }
+
+    &__loading {        
+        grid-row: 1 / 2;
+        grid-column: 3 / 4;
+        width: 2.5rem;
+        margin-left: 1rem;
+        justify-self: flex-start;
+        animation: animationLoading 3s linear infinite;
+    }
+
+    &__message {
+        grid-row: 1 / 2;
+        grid-column: 3 / 4;        
+        justify-self: flex-start;
+        color: #6bdd74;
+    }
+
+    &__modal {
+        position: absolute;
+        display: grid;
+        place-items: center;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #59546C33;
+        backdrop-filter: blur(2px);
+    }
+}
+
+.modal__message {
+    width: 70%;
+    height: 8rem;
+    border: 1px solid $color_font;
+    background-color: #0E131F;
+    padding: 10% 2rem 0 2rem;
+}
+
+@keyframes animationError {
+    0% {
+        opacity: 1;
+    }
+
+    80% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+@keyframes animationLoading {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
     }
 }
 
 
 .players {
     display: grid;
-    grid-template-columns: 2fr repeat(9, 1fr);   
+    grid-template-columns: 2fr repeat(9, 1fr);
     overflow: auto;
     padding: 0.2rem;
 
@@ -41,7 +138,7 @@ $color_select: #FF0035;
         width: 100%;
         min-width: 5rem;
     }
-    
+
     &__header {
         display: grid;
         grid-template-columns: repeat(9, 1fr);
