--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,5 @@
 .header {
+  position: relative;
   display: flex;
   flex-direction: column;
   background-color: #0E131F;
@@ -26,7 +27,7 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  margin: 0.4rem 1.4rem 0 0;
+  margin: 0.4rem 0.4rem 0 0;
   position: absolute;
   right: 0;
 }
