--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,6 +6,7 @@ $color_select: #FF0035;
 
 
 .header {
+    position: relative;
     display: flex;
     flex-direction: column;
     background-color: $color_back;
@@ -38,7 +39,7 @@ $color_select: #FF0035;
     display: flex;
     align-items: center;
     gap: 0.5rem;
-    margin: 0.4rem 1.4rem 0 0;
+    margin: 0.4rem 0.4rem 0 0;
     position: absolute;
     right: 0;
 
