--- a/src/components/MatchLive/MatchLive.css
+++ b/src/components/MatchLive/MatchLive.css
@@ -7,7 +7,8 @@
   border-bottom: 1px solid #7ec929BB;
 }
 .matchlive__img {
-  height: 2.2rem;
+  height: 3rem;
+  object-fit: cover;
   -webkit-filter: drop-shadow(0px 0px 3px rgba(150, 150, 150, 0.7));
   filter: drop-shadow(0px 0px 3px rgba(150, 150, 150, 0.7));
 }
@@ -16,14 +17,14 @@
   height: 0.7rem;
 }
 .matchlive__time {
+  font-size: 1rem;
   grid-column: 4/5;
-  font-size: 0.8rem;
   grid-row: 2/3;
   color: #24e2e2;
 }
 .matchlive__status {
   grid-column: 4/5;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   grid-row: 3/4;
 }
 .matchlive__status--finished {
