--- a/src/components/MatchLive/MatchLive.scss
+++ b/src/components/MatchLive/MatchLive.scss
@@ -13,7 +13,8 @@ $color_select: #FF0035;
     border-bottom: 1px solid #7ec929BB;
 
     &__img {
-        height: 2.2rem;
+        height: 3rem;
+        object-fit: cover;
         -webkit-filter: drop-shadow(0px 0px 3px rgba(150, 150, 150, 0.7));
         filter: drop-shadow(0px 0px 3px rgba(150, 150, 150, 0.7));
 
@@ -24,15 +25,15 @@ $color_select: #FF0035;
     }
 
     &__time {
+        font-size: 1rem;
         grid-column: 4 / 5;
-        font-size: 0.8rem;
         grid-row: 2 / 3;
         color: #24e2e2;
     }
 
     &__status {
         grid-column: 4 / 5;
-        font-size: 0.8rem;
+        font-size: 0.9rem;
         grid-row: 3 / 4;
 
         &--finished {
