--- a/src/components/Player/Player.scss
+++ b/src/components/Player/Player.scss
@@ -9,11 +9,12 @@ $color_select: #FF0035;
     grid-template-columns: 2fr repeat(9, 1fr);
     grid-column: 1 / span 10;
     margin: 0rem;
+    transition: all 0.3s;
 
     &:hover {
         filter: brightness(180%);
     }
-    
+
 
     &__name {
         width: 100%;
@@ -24,13 +25,17 @@ $color_select: #FF0035;
         min-width: 5rem;
         margin: 0.0025em;
         border-bottom: 1px solid #7ec929bb;
+
+        &--true {
+            background-color: #1c303a;
+        }
     }
 
     &__result {
         width: 100%;
         align-self: center;
         justify-self: center;
-        background-color: $color_mark;
+        background-color: $color_back;
         padding: 0.1rem 0;
         color: #e6c73d;
         font-weight: 600;
@@ -38,6 +43,10 @@ $color_select: #FF0035;
         border-left: 1px solid #2b302c;
         border-right: 1px solid #2b302c;
         border-top: 1px solid #2b302c;
-        
+
+        &--true {
+            background-color: #182033;
+        }
+
     }
 }
