--- a/src/routes/Betting/BettingPage.css
+++ b/src/routes/Betting/BettingPage.css
@@ -88,6 +88,22 @@
   padding: 10% 2rem 0 2rem;
 }
 
+.goodlook {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin: 5rem;
+}
+.goodlook__message {
+  font-size: 2rem;
+  color: #f8c076;
+}
+.goodlook__good {
+  font-size: 3rem;
+  color: #00ff1a;
+  font-weight: 600;
+}
+
 @keyframes animationError {
   0% {
     opacity: 1;
