--- a/src/routes/Betting/BettingPage.scss
+++ b/src/routes/Betting/BettingPage.scss
@@ -104,6 +104,24 @@ $color_select: #FF0035;
     padding: 10% 2rem 0 2rem;
 }
 
+.goodlook {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin: 5rem;
+
+    &__message{
+        font-size: 2rem;
+        color: #f8c076;
+    }
+
+    &__good{
+        font-size: 3rem;
+        color: #00ff1a;
+        font-weight: 600;
+    }
+}
+
 @keyframes animationError {
     0% {
         opacity: 1;
