Added status match on bets

--- a/src/components/Fixtures/Fixtures.css
+++ b/src/components/Fixtures/Fixtures.css
@@ -1,6 +1,6 @@
 .fixtures {
   padding: 0.5rem;
-  background-color: #38405F;
+  background-color: #183c4d;
 }
 .fixtures__label {
   justify-self: left;
