--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -62,7 +62,7 @@
   width: 100%;
   padding: 0.4rem 0;
   font-size: 0.8rem;
-  background-color: #38405F;
+  background-color: #183c4d;
   border: 1px solid transparent;
   transition: all 0.3s linear;
   cursor: pointer;
