--- a/src/components/MatchBetting/MatchBetting.css
+++ b/src/components/MatchBetting/MatchBetting.css
@@ -85,6 +85,6 @@
   font-weight: 600;
   background-color: #17d627aa;
   transition: all 0.3s linear;
-  border: 1px solid #38405F;
+  border: 1px solid #183c4d;
   pointer-events: none;
 }
