--- a/src/components/MatchHeader/MatchHeader.css
+++ b/src/components/MatchHeader/MatchHeader.css
@@ -1,15 +1,17 @@
 .matchheader {
+  position: relative;
   background-color: #0E131F;
   box-shadow: 0 0 10px 1px #00000055;
+  border: 1px solid #7ec92940;
   border-bottom: 1px solid #7ec929bb;
-  width: 90%;
+  width: 4.63rem;
   height: 100%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 1fr;
   place-items: center;
-  padding: 0.07rem;
-  margin-bottom: 0.5rem;
+  padding: 0.1rem;
+  margin: 0 0.1rem 0.7rem 0.1rem;
   overflow: hidden;
 }
 .matchheader__container {
@@ -17,6 +19,45 @@
   display: flex;
   width: 100%;
   height: 100%;
+}
+.matchheader__finished--true {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding-right: 3rem;
+  writing-mode: vertical-rl;
+  text-orientation: sideways-right;
+  background-image: url("../../assets/finish-icon.svg");
+  background-repeat: no-repeat;
+  background-position: 4.6rem bottom;
+  background-size: 1.3rem;
+  background-color: #95e97440;
+}
+.matchheader__finished--false {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding-right: 2.5rem;
+  writing-mode: vertical-rl;
+  text-orientation: sideways-right;
+  background-image: url("../../assets/pending-icon.svg");
+  background-repeat: no-repeat;
+  background-position: 4.6rem 6.4rem;
+  background-size: 1.3rem;
+  background-color: #f7dd8640;
+}
+.matchheader__live--true {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding-right: 3rem;
+  writing-mode: vertical-rl;
+  text-orientation: sideways-right;
+  background-image: url("../../assets/live-icon.svg");
+  background-repeat: no-repeat;
+  background-position: 4.6rem bottom;
+  background-size: 1.5rem;
+  background-color: #ffffff40;
 }
 .matchheader__vs {
   position: absolute;
