--- a/src/components/Player/Player.css
+++ b/src/components/Player/Player.css
@@ -2,11 +2,11 @@
   display: grid;
   grid-template-columns: 2fr repeat(9, 1fr);
   grid-column: 1/span 10;
-  margin: 0rem;
   transition: all 0.3s;
+  margin-bottom: 0.2rem;
 }
 .player:hover {
-  filter: brightness(180%);
+  filter: brightness(220%);
 }
 .player__name {
   width: 100%;
@@ -14,22 +14,23 @@
   grid-column: 1/2;
   padding: 0.2rem 0;
   font-size: 0.8rem;
-  min-width: 5rem;
-  margin: 0.0025em;
+  width: 10.5rem;
+  margin: 0.0025em 0.2rem 0.0025rem;
+  text-align: left;
+  padding: 0.2rem 0 0 0.3rem;
   border-bottom: 1px solid #7ec929bb;
 }
 .player__name--true {
   background-color: #1c303a;
 }
 .player__result {
-  width: 100%;
+  width: 5rem;
   align-self: center;
   justify-self: center;
   background-color: #0E131F;
   padding: 0.1rem 0;
   color: #e6c73d;
   font-weight: 600;
-  min-width: 3.2rem;
   border-left: 1px solid #2b302c;
   border-right: 1px solid #2b302c;
   border-top: 1px solid #2b302c;
@@ -39,5 +40,6 @@
 }
 
 .result__true {
-  background-color: #19d4cb15;
+  background-color: #0ff07f35;
+  border: 1px solid #77e25c99;
 }
