--- a/src/components/Stats/Stats.scss
+++ b/src/components/Stats/Stats.scss
@@ -1,5 +1,5 @@
 $color_back: #0E131F;
-$color_title: #38405F;
+$color_title: #183c4d;
 $color_mark: #59546C;
 $color_font: #8B939C;
 $color_select: #FF0035;
