--- a/src/components/Team/Team.scss
+++ b/src/components/Team/Team.scss
@@ -1,9 +1,8 @@
 $color_back: #0E131F;
-$color_title: #38405F;
+$color_title: #183c4d;
 $color_mark: #59546C;
 $color_font: #8B939C;
 $color_select: #FF0035;
-
 
 .team {
     display: grid;
