--- a/src/routes/Betting/BettingPage.scss
+++ b/src/routes/Betting/BettingPage.scss
@@ -1,5 +1,5 @@
 $color_back: #0E131F;
-$color_title: #38405F;
+$color_title: #183c4d;
 $color_mark: #59546C;
 $color_font: #8B939C;
 $color_select: #FF0035;
@@ -151,10 +151,10 @@ $color_select: #FF0035;
     grid-template-columns: 2fr repeat(9, 1fr);
     overflow: auto;
     padding: 0.2rem;
+    
 
     &__space {
-        width: 100%;
-        min-width: 5rem;
+        width: 11.1rem;
     }
 
     &__header {
@@ -166,6 +166,7 @@ $color_select: #FF0035;
         place-items: center;
         min-width: 3.5rem;
         margin-right: 0.1rem;
+        margin-top: 0.8rem;
     }
 
 }
