--- a/src/components/MatchLive/MatchLive.scss
+++ b/src/components/MatchLive/MatchLive.scss
@@ -8,9 +8,13 @@ $color_select: #FF0035;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     place-items: center;
+    width: 99%;
     padding: 0.4rem;
     background-color: $color_back;
     border-bottom: 1px solid #7ec929BB;
+    @media (max-width: 540px) {
+        width: 96%; 
+    }
 
     &__img {
         height: 3rem;
@@ -125,6 +129,9 @@ $color_select: #FF0035;
         &:checked ~ .buttondetails__img{
             transform: rotate(0deg);
         }
+        &:checked ~ .buttondetails__name{
+            color: #ffd68bbb;
+        }
     }
 
     &__img {
@@ -134,6 +141,12 @@ $color_select: #FF0035;
         top: 0.4rem;
         transition: all 0.3s;
         transform: rotate(180deg);
+        pointer-events: none;
+    }
+
+    &__name {
+        margin: 0 0 0 1rem;
+        pointer-events: none;
     }
     
 }
